force-app/main/default/objects/ffr__ReportingValue__c/ffr__ReportingValue__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingvalue</customHelpPage>
    <label>Reporting Value</label>
    <nameField>
        <label>Reporting Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>