force-app/main/default/objects/ffr__ReportingValue__c/fields/ffr__QualifiedKey__c.field-meta.xml
<CustomField>
    <fullName>ffr__QualifiedKey__c</fullName>
    <formula>TRIM(TEXT(ffr__Type__c) + &apos; &apos; + TEXT(ffr__TemplateKey__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type / Template Key</label>
    <type>Text</type>
</CustomField>