force-app/main/default/objects/ffr__ReportingValue__c/fields/ffr__ReportingDataRange__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingDataRange__c</fullName>
    <label>Reporting Data Range</label>
    <referenceTo>ffr__ReportingDataRange__c</referenceTo>
    <relationshipLabel>Reporting Values</relationshipLabel>
    <relationshipName>ReportingValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>