force-app/main/default/objects/ffr__ReportingValue__c/fields/ffr__Sort__c.field-meta.xml
<CustomField>
    <fullName>ffr__Sort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sort</label>
    <type>Checkbox</type>
</CustomField>