force-app/main/default/objects/ffr__ReportingValue__c/fields/ffr__Sum__c.field-meta.xml
<CustomField>
    <fullName>ffr__Sum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sum</label>
    <type>Checkbox</type>
</CustomField>