force-app/main/default/objects/ffr__ReportingValue__c/fields/ffr__Type__c.field-meta.xml
<CustomField>
    <fullName>ffr__Type__c</fullName>
    <inlineHelpText>If the reporting data range type is Summary, you must select an aggregation query method: Group or Sum. If the data range type is Detail, you must select the list query method: Detail. You cannot mix these query methods.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>