force-app/main/default/objects/ffr__ReportingValue__c/recordTypes/ffr__Detail.recordType-meta.xml
<RecordType>
    <fullName>ffr__Detail</fullName>
    <active>true</active>
    <description>This record type is only valid when the Data Range Type is &quot;Detail&quot;.</description>
    <label>Detail</label>
</RecordType>