force-app/main/default/objects/ffr__ReportingValue__c/recordTypes/ffr__Summary.recordType-meta.xml
<RecordType>
    <fullName>ffr__Summary</fullName>
    <active>true</active>
    <description>This record type is only valid when the Data Range Type is &quot;Summary&quot;.</description>
    <label>Summary</label>
</RecordType>